--- a/1 - structboost/css/style.css
+++ b/1 - structboost/css/style.css
@@ -259,7 +259,7 @@ footer .container .main-area .left {
     max-width: 27.9rem;
 }
 
-footer .container .main-area .left p{
+footer .container .main-area .left p {
     color: var(--gray-600);
     font-size: 1.6rem;
     line-height: 150%;
@@ -288,7 +288,7 @@ footer .container .main-area .right .item-nav ul li:not(:last-child) {
     margin-bottom: 3.2rem;
 }
 
-footer .container .main-area .right .item-nav ul li a{
+footer .container .main-area .right .item-nav ul li a {
     color: var(--gray-600);
     font-size: 1.6rem;
     letter-spacing: -0.48px;
@@ -300,11 +300,21 @@ footer .container .main-area .right .item-nav ul li a{
     gap: 1.6rem;
 }
 
-footer .container .main-area .right .item-nav ul li a:hover{
+footer .container .main-area .right .item-nav ul li a:hover {
     color: var(--gray-100);
 }
 
 footer .container .copy {
     color: var(--gray-600);
     letter-spacing: -0.48px;
+}
+
+/** MENU MOBILE **/
+header .container .btn-mobile {
+    display: none;
+}
+
+/**ILUSTRA HERO**/
+.section-hero .container .ilustra-mobile{
+    display: none;
 }
